--- a/ARKitPhysics/Base.lproj/Main.storyboard
+++ b/ARKitPhysics/Base.lproj/Main.storyboard
@@ -87,22 +87,33 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flower" translatesAutoresizingMaskIntoConstraints="NO" id="mNR-qs-ebr">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5el-Le-I3h">
-                                <rect key="frame" x="134" y="551" width="107" height="36"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="点击开启AR"/>
-                                <connections>
-                                    <segue destination="BV1-FR-VrT" kind="show" id="ACx-cz-a7a"/>
-                                </connections>
-                            </button>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Ah-Jn-CPD">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem id="W6G-Se-DAE">
+                                        <nil key="title"/>
+                                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5el-Le-I3h">
+                                            <rect key="frame" x="135.5" y="0.0" width="104" height="44"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <state key="normal" title="开启AR">
+                                                <color key="titleColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </state>
+                                            <connections>
+                                                <segue destination="BV1-FR-VrT" kind="show" id="ACx-cz-a7a"/>
+                                            </connections>
+                                        </button>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="mNR-qs-ebr" firstAttribute="top" secondItem="l07-80-NcY" secondAttribute="top" id="IWk-rj-P8n"/>
+                            <constraint firstItem="9Ah-Jn-CPD" firstAttribute="top" secondItem="l07-80-NcY" secondAttribute="top" id="XfV-Xx-XAM"/>
                             <constraint firstItem="l07-80-NcY" firstAttribute="bottom" secondItem="mNR-qs-ebr" secondAttribute="bottom" id="ZEO-7D-Eeu"/>
+                            <constraint firstItem="9Ah-Jn-CPD" firstAttribute="leading" secondItem="l07-80-NcY" secondAttribute="leading" id="ZwB-xD-EBH"/>
                             <constraint firstItem="l07-80-NcY" firstAttribute="trailing" secondItem="mNR-qs-ebr" secondAttribute="trailing" id="eD5-sO-0on"/>
-                            <constraint firstItem="l07-80-NcY" firstAttribute="bottom" secondItem="5el-Le-I3h" secondAttribute="bottom" constant="80" id="hHW-19-IdI"/>
-                            <constraint firstItem="5el-Le-I3h" firstAttribute="centerX" secondItem="nS6-RE-wpD" secondAttribute="centerX" id="idH-QV-NQ4"/>
+                            <constraint firstItem="9Ah-Jn-CPD" firstAttribute="trailing" secondItem="l07-80-NcY" secondAttribute="trailing" id="qpl-8J-F1g"/>
                             <constraint firstItem="mNR-qs-ebr" firstAttribute="leading" secondItem="l07-80-NcY" secondAttribute="leading" id="sHt-Bj-qck"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="l07-80-NcY"/>
