--- a/ARKitPhysics/Base.lproj/ARMain.storyboard
+++ b/ARKitPhysics/Base.lproj/ARMain.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5D5-mb-HjW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -99,57 +99,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="828" y="-259.52023988005999"/>
-        </scene>
-        <!--Home View Controller-->
-        <scene sceneID="fYe-gq-Xq9">
-            <objects>
-                <viewController id="5D5-mb-HjW" customClass="HomeViewController" customModule="ARKitPhysics" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="nS6-RE-wpD">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flower" translatesAutoresizingMaskIntoConstraints="NO" id="mNR-qs-ebr">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                            </imageView>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Ah-Jn-CPD">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <items>
-                                    <navigationItem id="W6G-Se-DAE">
-                                        <nil key="title"/>
-                                        <button key="titleView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5el-Le-I3h">
-                                            <rect key="frame" x="157.5" y="5" width="60" height="34"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <state key="normal" title="开启AR">
-                                                <color key="titleColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            </state>
-                                            <connections>
-                                                <segue destination="BV1-FR-VrT" kind="show" id="ACx-cz-a7a"/>
-                                            </connections>
-                                        </button>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="mNR-qs-ebr" firstAttribute="top" secondItem="l07-80-NcY" secondAttribute="top" id="IWk-rj-P8n"/>
-                            <constraint firstItem="9Ah-Jn-CPD" firstAttribute="top" secondItem="l07-80-NcY" secondAttribute="top" id="XfV-Xx-XAM"/>
-                            <constraint firstItem="l07-80-NcY" firstAttribute="bottom" secondItem="mNR-qs-ebr" secondAttribute="bottom" id="ZEO-7D-Eeu"/>
-                            <constraint firstItem="9Ah-Jn-CPD" firstAttribute="leading" secondItem="l07-80-NcY" secondAttribute="leading" id="ZwB-xD-EBH"/>
-                            <constraint firstItem="l07-80-NcY" firstAttribute="trailing" secondItem="mNR-qs-ebr" secondAttribute="trailing" id="eD5-sO-0on"/>
-                            <constraint firstItem="9Ah-Jn-CPD" firstAttribute="trailing" secondItem="l07-80-NcY" secondAttribute="trailing" id="qpl-8J-F1g"/>
-                            <constraint firstItem="mNR-qs-ebr" firstAttribute="leading" secondItem="l07-80-NcY" secondAttribute="leading" id="sHt-Bj-qck"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="l07-80-NcY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0No-ll-zKW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-74" y="-258"/>
+            <point key="canvasLocation" x="-558" y="-329"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="flower" width="466" height="628"/>
-    </resources>
 </document>
